# cpp_toying

./: .gitignore  CMakeLists.txt
.github/workflows/: install.yml  style.yml  ubuntu.yml
all/: CMakeLists.txt
cmake/: CPM.cmake  buildType.cmake  projectDependencies.cmake  tools.cmake  warnings.cmake
scripts/: all.sh  docs.sh  release.sh  strip.sh  test.sh
